positioned elements, layed out nav, started on header

--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
     </nav>
     <!-- head -->
     <header>
-      <h1>Learning Flexbox</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-        voluptas hic debitis tempore ipsam minus maiores, illum magnam. Dicta
-        doloremque quidem neque vero modi libero excepturi nesciunt quasi
-        laboriosam quis?
-      </p>
+      <div>
+        <h1>Learning Flexbox</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+          voluptas hic debitis tempore ipsam minus maiores, illum magnam. Dicta
+          doloremque quidem neque vero modi libero excepturi nesciunt quasi
+          laboriosam quis?
+        </p>
+      </div>
+      <img src="images/header.jpg" alt="alaskan sunrise" />
     </header>
     <main>
       <section class="first">
@@ -95,12 +98,14 @@
           </p>
         </article>
       </section>
-      <!-- <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul> -->
     </main>
+    <address>
+      <!-- <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul> -->
+    </address>
     <footer>Made with love by Dan</footer>
   </body>
 </html>
